add show by date

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
 <small>
-    <a href="http://dqa01/wiki/DQA/index.php/Tool_Development_Team">DQA Tool Development Team</a>
-    Poc 許維城
+    <a href="http://dqa01/wiki/DQA/index.php/Tool_Development_Team"> Lab 5  五號實驗室</a>
+    Poc 許維城 
 </small>
 <nav>
 <ul>
