--- a/app/views/carts/_found_customer.html.haml
+++ b/app/views/carts/_found_customer.html.haml
@@ -1,15 +1,23 @@
 - if customer.total >= 1
-  - customer.each_hit_with_result do |hit, u|
-    = form_tag cart_load_customer_path, :method => :get, remote: true do
-      = hidden_field_tag :load_customer, u.id
-      = u.id
-      = u.name
-      = u.role
-      / = u.expire_date.strftime("%Y-%m-%d")
-      / = u.address
-      = submit_tag "load"
+  %table.table.table-striped
+    %tr
+      %th 客戶姓名
+      %th 會員等級
+      %th 功能
+      %th ID
+    - customer.each_hit_with_result do |hit, u|
+      %tr
+        %td
+          = form_tag cart_load_customer_path, :method => :get, remote: true do
+            =hidden_field_tag :load_customer, u.id
+            =submit_tag "載入會員"
+        %td= u.name
+        %td= u.role
+        %td= u.id
 
-    %br/
+
+
+
 
 - else
   :javascript
