--- a/app/views/books/_book.html.haml
+++ b/app/views/books/_book.html.haml
@@ -1,12 +1,12 @@
 %tr{id: "book_id_#{book.id}"}
-  %td= book.id
+  / %td= book.id
   %td= book.name
   %td= book.isbn
   %td= book.sn
   %td= book.price
   %td= book.author
   %td= book.sale_type
-  %td= book.category
+  / %td= book.category
   / %td= book.release_date
   / %td= book.location
   / %td= book.comment
